# code-notes-synth

./: .env  BACKEND_README.md  CMakeLists.txt  README.md  index.html  main.cpp  package-lock.json  package.json  run-backend.sh  setup-backend.sh  troubleshoot-build.sh
src/: index.css
src/components/: Controls.tsx  PatternVisualizer.tsx
src/lib/: musicGenerator.ts
src/pages/: Index.tsx
supabase/: config.toml
